# quickquiz

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 20241215_1200-001_initial_schema.py
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml  init-db.sql
docs/: api-docs.md  day-4-completion.md  deployment.md  development-guidelines.md  implementation-plan.md  prd.md  step-1-1-completion.md
scripts/: test_prod_deps.py
src/: main.py
src/quickquiz/: __init__.py
src/quickquiz/api/: __init__.py  main.py
src/quickquiz/api/middleware/: __init__.py  auth.py
src/quickquiz/api/routes/: __init__.py  evaluate.py  generate.py  ingest.py  questions.py
src/quickquiz/core/: __init__.py  cache.py  config.py  database.py  exceptions.py
src/quickquiz/models/: __init__.py  database.py  schemas.py
src/quickquiz/services/: __init__.py  embeddings.py  evaluator.py  generator.py  ingestor.py
src/quickquiz/utils/: __init__.py  pdf_parser.py  prompts.py  text_processor.py  url_extractor.py
tests/: __init__.py  conftest.py  test_ingestion_day4.py
